Optimized webpage for mobile

--- a/bogil website/css/freelancer.css
+++ b/bogil website/css/freelancer.css
@@ -179,9 +179,8 @@ section {
 }
 
 section h2 {
-    margin: 0;
+    margin: 0 auto;
     font-size: 3em;
-    padding: 50px;
 }
 
 section.success {
