--- a/bogil website/css/freelancer.css
+++ b/bogil website/css/freelancer.css
@@ -36,7 +36,7 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Avenir,"Avenir",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
 
@@ -102,7 +102,7 @@ header img {
 header .intro-text .name {
     display: block;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Avenir,"Avenir",Helvetica,Arial,sans-serif;
     font-size: 2em;
     font-weight: 700;
 }
@@ -153,7 +153,7 @@ header .intro-text .skills {
 
 .navbar {
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Avenir,"Avenir",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
 
